<resources>
    <string name="app_name">SiGatto</string>
    <string name="title_home">Home</string>
    <string name="title_hobby">Hobby</string>
    <string name="title_profile">Profile</string>
    <string name="gatto_intro">Hello, my name is Gatto</string>
    <string name="gatto_welcome">Welcome to the Si Gatto app. Here you will get information about one of the people who uses my photo as a profile picture, who is also my master, his name is Ryan, he also asked me to introduce himself to you. So, here we go...</string>
    <string name="btnProfile_label">Go To Profile</string>
    <string name="btnGithub_label">Go To My Github</string>
    <string name="my_nim">L0122114</string>
    <string name="my_name">Muhammad Ryan Fikri Fakhrezi</string>
    <string name="my_major_gen">Informatics batch of 2022</string>
    <string name="desc_label">Description</string>
    <string name="my_desc">Introducing my name is Muhammad Ryan Fikri Fakhrezi, you can call me Ryan. I come from Wonogiri and am currently studying computer science at Sebelas Maret University Surakarta. My favorite programming language is Java because I come from Java.</string>
    <string name="btnShare_label">Share</string>
    <string name="btnAnime_label">Watched Anime</string>
    <string name="anime_name">Anime\'s Name</string>
    <string name="description">Deskripsi</string>
    <string name="tab_text_anime">Anime</string>
    <string name="tab_text_book">Book</string>
    <string-array name="data_book_name">
        <item>Si Anak Cahaya</item>
        <item>Si Anak Pemberani</item>
        <item>Si Anak Pintar</item>
        <item>Si Anak Spesial</item>
        <item>Si Anak Kuat</item>
        <item>Bumi</item>
        <item>Bulan</item>
        <item>Matahari</item>
        <item>Bintang</item>
        <item>Ceroz dan Batozar</item>
        <item>Komet</item>
        <item>Komet Minor</item>
    </string-array>
    <string-array name="data_book_desc">
        <item>This book is about Nurmas, the child of light who had a fun-filled and amazing childhood adventure. What exactly did Nurmas do that made the whole village remember the incident that made him officially called the child of light?</item>
        <item>This book is about Eliana, a brave child who defends the land, rivers, forests and valleys of her village. When the greed of the world comes, Eliana and her best friend work together to fight back.</item>
        <item>This book is about Pukat, the smartest kid in the family, whose childhood is filled with exciting adventures and hilarious incidents and let\'s not forget the fights with his brothers and sisters. But will he be able to answer the great riddle, what is the most valuable treasure in their village?</item>
        <item>This book is about Burlian, a stubborn boy who had a very special childhood. One day he will travel the world, seeing how much wider it is than his hometown.</item>
        <item>This book is about Amelia, a child who has great dreams for her beloved village.</item>
        <item>My name is Raib, I\'m 15 years old, tenth grade. I\'m a girl like you, your younger siblings, your neighbors. I have two cats, named White and Black. My mom and dad are nice. The teachers at my school are fun. My friends are nice and cohesive.</item>
        <item>Her name was Seli, she was 15 years old, in tenth grade. She was just like any other teenager. Liking the same things, listening to the same songs, going to fast food outlets, watching drama series, movies, and things that teenagers like.</item>
        <item>His name is Ali, 15 years old, class X. If only his parents had allowed him, he would already be in the final year of a physics doctoral program at a renowned university. Ali didn\'t like his school, his teachers, his classmates. Everything was boring to him. But since he found out there was something strange about me and Seli, his classmate, his boring life turned exciting.</item>
        <item>My name is Raib, I can disappear. Seli, my classmate, can shoot lightning out of the palm of her hand. And Ali, the ringleader and genius, can turn into a giant bear. The three of us then traveled to parallel worlds unknown to many people, called the Earth Clan, Moon Clan, Sun Clan, and Star Clan. We met great characters. People from other clans.</item>
        <item>At first, we were just going on an ordinary field trip like other school students. Until Ali, with his genius and mischievousness, decided to investigate an ancient room. We arrived in another part of the parallel world, meeting powerful fighters, gaining new powers and amazing techniques. The parallel world turns out to be vast, with so many great people in it.</item>
        <item>After our "big enemy" escaped, the parallel world is in a precarious situation. It was only a matter of time before a major battle would take place. What if thousands of fighters who can disappear, emit lightning, including other advanced technologies appear on the surface of Earth? No one can imagine the chaos that would ensue. The situation became even more complicated when Ali, at the last second, jumped into the portal to the Comet Clan. The three of us were lost in an alien clan in search of the most powerful heirloom in a parallel world.</item>
        <item>The battle against the Crownless One will end here. Whoever wins, it all ends here, in the Minor Comet clan, where the alliance of Hunters was once formed, and great heirlooms were once created.In the final saga against the Crownless One, me, Seli and Ali found great traveling companions, who together overcame many obstacles. Understanding things, practicing new techniques, and fighting together. This is our story. About true friendship. About sacrifice. About ambition. About forgiveness. My name is Raib, and I can disappear.</item>
    </string-array>
    <string-array name="data_anime_name">
        <item>Angel Beats!</item>
        <item>Bocchi the Rock</item>
        <item>Classroom of the Elite</item>
        <item>Frieren Beyond Journey\'s End</item>
        <item>Golden Time</item>
        <item>Grand Blue Dreaming</item>
        <item>Horimiya</item>
        <item>Kaguya-sama - Love is War</item>
        <item>My Teen Romantic Comedy SNAFU</item>
        <item>No Game No Life</item>
        <item>Non Non Biyori</item>
        <item>Oshi No Ko</item>
        <item>Rascal Does Not Dream of Bunny Girl Senpai</item>
        <item>Spy x Family</item>
        <item>Sword Art Online</item>
        <item>The Quintessential Quintuplets</item>
    </string-array>
    <string-array name="data_anime_shortDesc">
        <item><![CDATA["Angel Beats!” is a poignant tale set in the afterlife, where Yuzuru Otonashi grapples with lost memories and battles alongside others to find peace before moving on.]]></item>
        <item><![CDATA["Bocchi the Rock!" follows socially anxious Hitori “Bocchi” Gotou as she overcomes her fears to join a band and perform live with her talented bandmates.]]></item>
        <item><![CDATA[Classroom of the Elite portrays Koudo Ikusei Senior High School’s deceptive utopia, where only the most superior students receive favorable treatment.]]></item>
        <item><![CDATA[Frieren: Beyond Journey’s End follows elven mage Frieren, a former hero’s party member, as she navigates her immortal life and seeks deeper connections with humans.]]></item>
        <item><![CDATA[Golden Time follows Banri Tada, who, after a tragic accident, loses his memories and embarks on a new life at law school in Tokyo, encountering love and growth along the way.]]></item>
        <item><![CDATA[Grand Blue follows Iori’s misadventures with his eccentric new friends as he strives to realize his ideal college dream, while also learning how to scuba dive.]]></item>
        <item><![CDATA[Horimiya portrays Kyouko Hori and Izumi Miyamura’s unexpected friendship, revealing their hidden selves beyond appearances.]]></item>
        <item><![CDATA[Kaguya-sama: Love Is War portrays two prideful geniuses who engage in over-the-top schemes to make the other confess their love, believing that the first to do so would “lose” in their relationship.]]></item>
        <item><![CDATA[My Teen Romantic Comedy SNAFU follows Hachiman Hikigaya, a cynical high school student forced into the Volunteer Service Club, where he navigates others’ problems with his unique perspective.]]></item>
        <item><![CDATA[No Game No Life revolves around Sora and Shiro, two genius hikikomori (shut-in) siblings who dominate the online gaming world as “Blank”, the undefeatable duo, and are challenged to an online chess match by an anonymous person.]]></item>
        <item><![CDATA[Non Non Biyori focuses on a group of students in a quiet countryside village, introducing the arrival of Ichijo Hotaru, a transfer student from Tokyo, who becomes the fifth student at the village school.]]></item>
        <item><![CDATA[Oshi no Ko follows a doctor and his recently deceased patient, reborn as twins to a famous Japanese pop idol, navigating the highs and lows of the entertainment industry.]]></item>
        <item><![CDATA[Rascal Does Not Dream of Bunny Girl Senpai follows Sakuta Azusagawa, who encounters a mysterious bunny girl during Golden Week, unraveling a tale of adolescence and intrigue.]]></item>
        <item><![CDATA[Spy × Family follows a spy who “builds a family” for a mission, unaware that his adopted daughter is a telepath and his wife-to-be is a skilled assassin.]]></item>
        <item><![CDATA[Sword Art Online follows Kirito, a powerful swordsman, and his friends trapped in a virtual reality MMORPG, fighting for their lives and seeking escape by beating the game.]]></item>
        <item><![CDATA[The Quintessential Quintuplets follows a high-school student hired as a tutor for identical quintuplets, navigating their academic struggles and unexpected bonds.]]></item>
    </string-array>
</resources>